package com.guzman.clases.consultas;

public class Consultas {
}
