package com.guzman.clases.infolineas;

public class Compañía {
}
