@startuml


 class TarjetaSim{
 +String iccid
 +String dn
 +String sobre
 +String compañía
 +setIccid()
 +getIccid()
 +setdn()
 +getdn()
 +setsobre()
 +getsobre()
 +setcompañía()
 +getcompañía()
 +TarjetaSim()
 +TarjetaSim(String iccid, String dn, String sobre, String compañía)
 +toString()
 }

class IniciarSesion{
+String usuario
+String contraseña
+setusuario()
+getusuario()
+setcontraseña()
+getcontraseña(String usuario, String contraseña)
+toString()
}

IniciarSesion <|-- Perfil
class Perfil{
+int tipo
+int nombrePerfil
+String usuario
+String contraseña
+setusuario()
+getusuario()
+setcontraseña()
+getcontraseña()
+Perfil()
+Perfil(int tipo, int nombrePerfil, String usuario, String contraseña)
+toString()
}

Compañía <|-- Consultas

class ActivacionDeSim{
+datetime fecha
+boolean activacion
+setfecha()
+getfecha()

}


RecargaSaldo <|-- TarjetaSim

 class RecargaSaldo{
 +String dn
 +int tipo
 +float monto
 +datetime fechaDeRecarga
 +compañía
 +setdn()
 +getdn()
 +settipo()
 +gettipo()
 +setmonto()
 +getmonto()
 +setfecharecarga()
 +getfecharecarga()
 +recarga()
 +recarga(String dn, int tipo, float monto, datetime fecharecarga)
 +toString()
 }

 class Compañía{
 +int id
 +String nombre
 +setid()
 +getid()
 +setnombre()
 +getnombre()
 +Compañía()
 +Compañía(int id, String nombre)
 +toString()
 }

 class Consultas{
 +consultas()
 +toString()
 }

@enduml